# CullCore

./: Cargo.toml  README.md
benches/: scoring.rs
src/: cli.rs  clustering.rs  error.rs  lib.rs  loader.rs  main.rs  output.rs  scorer.rs  verdict.rs
src/metrics/: blur.rs  exposure.rs  mod.rs  similarity.rs
src/tests/: scorer_test.rs
