[package]
name = "cullcore"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "=0.25.0"
imageproc = "=0.25.0"
img_hash = "3.2.0"

rayon = "1.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"